feat(encoding): reencode index1 batch to utf-8

--- a/index1194.html
+++ b/index1194.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Это особый тренинг. Для тренеров и коучей, а также для тех людей, кто ищет пути соединения подлинно духовного с повседневной жизнью. Если слова "высшие уровни сознания", "чистое сознание", "самадхи" Вам не просто знакомы, а являются Вашей целью - этот тренинг покажет Вам самый кратчайший путь.  Если Вы всегда хотели понять, как устроен мир и человеческий разум, как наше сознание создает эту реальность, и как мы можем выйти из "матрицы" нашего ума, чтобы соединится с настоящим... Вы не просто узнаете это - Вы испытаете это на тренинге как свой собственный непосредственный опыт." />
         <meta name="keywords" content="высшее я" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
