--- a/index1c82.html
+++ b/index1c82.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Самый бесстыдный тренинг из всей серии!  И, в то же время, самый откровенный.  В нем Вы увидите наглядный пример того, как используется манипуляция в работе с людьми. Причем, так, что людям это нравится! Когда вы посмотрите этот тренинг...  Вы поймете, что манипуляция — это, на самом деле, не плохо. А иногда — очень даже хорошо!  ...И на какой-то минуте (как и участникам тренинга) Вам станет ясно, что вообще нет ничего более честного и морального, чем откровенная манипуляция. Я серьезно.  Кроме того, Вы увидете в действии самый эффективный метод манипуляции из НЛП — фрейминг (создание рамок и управление теми рамками, которые уже находятся в сознании людей). Если вникните, то сможете его использовать и сами.  А если Вы знакомы с НЛП, то сможете смоделировать еще четыре очень мощных инструмента манипуляции человеческим сознанием." />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
