--- a/print1178.html
+++ b/print1178.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ìåòà-ñèñòåìíûå óðîâíè äëÿ ðåàëèçàöèè öåëåé</title>
+<title>Мета-системные уровни для реализации целей</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=C46664D1-F45AF-434EA0C4 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:30:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='áåññîçíàòåëüíîå, íëï'>
-<meta name="description" content='Øàãè òåõíèêè.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='бессознательное, нлп'>
+<meta name="description" content='Шаги техники.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,32 +14,32 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ìåòà-ñèñòåìíûå óðîâíè äëÿ ðåàëèçàöèè öåëåé</h1><a href=index1178.html?id=C46664D1-F45AF-434EA0C4 class=slink>web-âåðñèÿ</a><p><span class='print'><p align="left">
-	1.&nbsp;Îòâåòüòå <u>ïèñüìåííî</u> íà òðè âîïðîñà:</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Мета-системные уровни для реализации целей</h1><a href=index1178.html?id=C46664D1-F45AF-434EA0C4 class=slink>web-версия</a><p><span class='print'><p align="left">
+	1.&nbsp;Ответьте <u>письменно</u> на три вопроса:</p>
 <p align="left" style="margin-left: 40px;">
-	a)&nbsp;×åãî âû õîòèòå (êàê âû ïîéìåòå, ÷òî ïîëó÷èëè ýòî)?<br />
-	b)&nbsp;Çà÷åì âàì ýòî íóæíî?<br />
-	c)&nbsp;Ïî÷åìó âû äî ñèõ ïîð ýòîãî íå ïîëó÷èëè?</p>
+	a)&nbsp;Чего вы хотите (как вы поймете, что получили это)?<br />
+	b)&nbsp;Зачем вам это нужно?<br />
+	c)&nbsp;Почему вы до сих пор этого не получили?</p>
 <p align="left">
-	2.&nbsp;Îïðåäåëèòå 4 ñèñòåìíûõ óðîâíÿ, íà êîòîðûõ ðåàëèçóåòñÿ âàøà öåëü. Ïðè ýòîì ñèñòåìîé 1-ãî óðîâíÿ âñåãäà ÿâëÿåòåñü âû (âàøå áåññîçíàòåëüíîå), à ñèñòåìîé 4-ãî óðîâíÿ - ìàêñèìàëüíàÿ âîñïðèíèìàåìàÿ âàìè ñèñòåìà (âñå ÷åëîâå÷åñòâî, âñåëåííàÿ, ìèð, Áîã è ò.ï.)<br />
-	Åñëè âû íå óâåðåííû â òî÷íîñòè îïðåäåëåííûõ ñèñòåì, ìîæåòå îïðåäåëèòü áîëüøå 4-õ, îñòàâèâ èì âîçìîæíîñòü ñâåñòèñü ê 4-ì â õîäå òåõíèêè. Ðàçìàðêèðóéòå ïðîñòðàíñòâî äëÿ êàæäîé ñèñòåìû.</p>
+	2.&nbsp;Определите 4 системных уровня, на которых реализуется ваша цель. При этом системой 1-го уровня всегда являетесь вы (ваше бессознательное), а системой 4-го уровня - максимальная воспринимаемая вами система (все человечество, вселенная, мир, Бог и т.п.)<br />
+	Если вы не уверенны в точности определенных систем, можете определить больше 4-х, оставив им возможность свестись к 4-м в ходе техники. Размаркируйте пространство для каждой системы.</p>
 <p align="left">
-	3.&nbsp;Ïðîéäèòåñü ïî óðîâíÿì, âèçóàëèçèðóÿ êàæäóþ ñèñòåìó è àäðåñóÿ åé ñâîþ ïðîñüáó ðåàëèçîâàòü âàøó öåëü. Åñëè ïîëó÷èòå êàêîé-ëèáî ñèãíàë, óêàçûâàþùèé íà íåîáõîäèìîñòü òðàíñôîðìèðîâàòü öåëü - òðàíñôîðìèðóéòå åå. Äîáåéòåñü ïðèíÿòèÿ âàøåé ïðîñüáû êàæäîé ñèñòåìîé è ïîáëàãîäàðèòå åå çà ó÷àñòèå.</p>
+	3.&nbsp;Пройдитесь по уровням, визуализируя каждую систему и адресуя ей свою просьбу реализовать вашу цель. Если получите какой-либо сигнал, указывающий на необходимость трансформировать цель - трансформируйте ее. Добейтесь принятия вашей просьбы каждой системой и поблагодарите ее за участие.</p>
 <p align="left">
-	4.&nbsp;Ïîëó÷èòå âûñîêîïðîäóêòèâíîå ñîñòîÿíèå (High Performance State) ëþáûì óäîáíûì âàì ñïîñîáîì. (Æåëàòåëüíî, íî íå íåîáõîäèìî.)</p>
+	4.&nbsp;Получите высокопродуктивное состояние (High Performance State) любым удобным вам способом. (Желательно, но не необходимо.)</p>
 <p align="left">
-	5.&nbsp;Íà÷èíàÿ ñ 1-ãî óðîâíÿ, àññîöèèðóéòåñü ñ êàæäîé ñèñòåìîé è âîñïðèìèòå ïðîñüáó î ðåàëèçàöèè öåëè äëÿ ýòîãî ìèëîãî ÷åëîâåêà.</p>
+	5.&nbsp;Начиная с 1-го уровня, ассоциируйтесь с каждой системой и воспримите просьбу о реализации цели для этого милого человека.</p>
 <p align="left" style="margin-left: 40px;">
-	a)&nbsp;Äâèãàÿñü îò 1-ãî ê 4-ìó óðîâíþ, ñèìâîëè÷åñêè çàïóñòèòå ðåàëèçàöèþ ýòîé öåëè âíóòðè ñåáÿ.</p>
+	a)&nbsp;Двигаясь от 1-го к 4-му уровню, символически запустите реализацию этой цели внутри себя.</p>
 <p align="left" style="margin-left: 40px;">
-	b)&nbsp;Äâèãàÿñü îáðàòíî, îò 4-ãî ê 1-ìó óðîâíþ, ïîñìîòðèòå, ÷òî âíóòðè âàñ ïðîèñõîäèò. Âîçìîæíî, âû óâèäèòå êàêóþ-ëèáî âèçóàëüíóþ ìåòàôîðó èëè ïîëó÷èòå êàêóþ-ëèáî èíôîðìàöèþ ëþáûì äðóãèì ñïîñîáîì. Íà îñíîâå ýòîé èíôîðìàöèè äàéòå ðåêîìåíäàöèè ýòîìó ìèëîìó ÷åëîâåêó, ÷òî åìó íóæíî äåëàòü, ÷òîáû åãî öåëü ðåàëèçîâàëàñü.</p>
+	b)&nbsp;Двигаясь обратно, от 4-го к 1-му уровню, посмотрите, что внутри вас происходит. Возможно, вы увидите какую-либо визуальную метафору или получите какую-либо информацию любым другим способом. На основе этой информации дайте рекомендации этому милому человеку, что ему нужно делать, чтобы его цель реализовалась.</p>
 <p align="left">
-	6.&nbsp;Çàïèøèòå èëè çàðèñóéòå ïîëó÷åííóþ èíôîðìàöèþ.</p>
+	6.&nbsp;Запишите или зарисуйте полученную информацию.</p>
 <p align="left">
 	<br />
-	Äëÿ ïîëó÷åíèÿ ñèñòåìíîãî âèäåíèÿ êàêîé ëèáî ñèòóàöèè ýòà òåõíèêà âûïîëíÿåòñÿ òî÷íî òàê æå, òîëüêî íà 3-ì øàãå âû ïðîñèòå êàæäóþ ñèñòåìó ïîêàçàòü âàì ñèòóàöèþ ñ åå ïîçèöèè, à íà 5-ì øàãå ïðîïóñêàåòå ïóíêò à), íî ïðîõîäèòå âñå ðàâíî ñíà÷àëà &quot;ââåðõ&quot; ñ 1-ãî ïî 4-é óðîâåíü, à çàòåì - &quot;âíèç&quot; ñ 4-ãî ïî 1-é.</p>
+	Для получения системного видения какой либо ситуации эта техника выполняется точно так же, только на 3-м шаге вы просите каждую систему показать вам ситуацию с ее позиции, а на 5-м шаге пропускаете пункт а), но проходите все равно сначала &quot;вверх&quot; с 1-го по 4-й уровень, а затем - &quot;вниз&quot; с 4-го по 1-й.</p>
 <p align="right">
-	<em>Åãîð Áóëûãèí,<br />
+	<em>Егор Булыгин,<br />
 	</em><em><font size="1">29.09.06</font></em></p>
 <p align="center">
 	<font face="Verdana" size="2"><a name='vote'></a><script type='text/javascript'>
@@ -64,16 +64,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setupc863.html?id=C46664D1-F45AF-434EA0C4&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup4535.html?id=C46664D1-F45AF-434EA0C4&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup3ee2.html?id=C46664D1-F45AF-434EA0C4&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup0a0b.html?id=C46664D1-F45AF-434EA0C4&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupdadc.html?id=C46664D1-F45AF-434EA0C4&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupc863.html?id=C46664D1-F45AF-434EA0C4&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup4535.html?id=C46664D1-F45AF-434EA0C4&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup3ee2.html?id=C46664D1-F45AF-434EA0C4&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup0a0b.html?id=C46664D1-F45AF-434EA0C4&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupdadc.html?id=C46664D1-F45AF-434EA0C4&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -96,12 +96,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Ñèñòåìíàÿ ðàáîòà ñ öåëÿìè&quot;</p> <ul><li><a href='EE42B048-F466C-394CC55A.html' title='Ïîøàãîâàÿ èíñòðóêöèÿ îïòèìèçàöèè ñèñòåìû.'>Ìåòîä Îïòèìèçàöèè Ñèñòåìíûõ Êîììóíèêàöèé (ÌÎÑÊ)</a></li><li><a href='EF55077A-F45BC-9F9EDC1A.html' title='Øàãè òåõíèêè.'>Ìåòà-ñèñòåìíîå âèäåíèå</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Системная работа с целями&quot;</p> <ul><li><a href='EE42B048-F466C-394CC55A.html' title='Пошаговая инструкция оптимизации системы.'>Метод Оптимизации Системных Коммуникаций (МОСК)</a></li><li><a href='EF55077A-F45BC-9F9EDC1A.html' title='Шаги техники.'>Мета-системное видение</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/C46664D1-F45AF-434EA0C4" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -125,13 +125,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
 </script>
  </font><br />
 	<span class="normal"> </span></p>
-</span><p><a href=index1178.html?id=C46664D1-F45AF-434EA0C4 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index1178.html?id=C46664D1-F45AF-434EA0C4 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -192,7 +192,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -214,7 +214,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
