--- a/print1189.html
+++ b/print1189.html
@@ -2,7 +2,7 @@
 <title>Тест "Ваша ли это профессия?"</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4798 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:53 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='профессия, призвание'>
 <meta name="description" content='Этот тест, поможет Вам понять, насколько Ваша профессия позволяет Вам реализовывать свои способности и таланты, и накапливать успех и жизненные достижения.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
