--- a/print1c5d.html
+++ b/print1c5d.html
@@ -1,10 +1,10 @@
 <html>
-<title>×òî òàêîå êîó÷èíã? (èíòåðâüþ)</title>
+<title>Что такое коучинг? (интервью)</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F477A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:05:28 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='êîó÷èíã'>
-<meta name="description" content='Èíòåðâüþ ñ Åãîðîì Áóëûãèíûì, âçÿòîå Äåíèñîì Ñû÷îì ñïåöèàëüíî äëÿ GreatCoach.ru'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='коучинг'>
+<meta name="description" content='Интервью с Егором Булыгиным, взятое Денисом Сычом специально для GreatCoach.ru'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>×òî òàêîå êîó÷èíã? (èíòåðâüþ)</h1><a href=index1c5d.html?id=F477A class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	Íåñêîëüêî äíåé íàçàä ìîé êîëëåãà - êîó÷ è òðåíåð ÍËÏ, Äåíèñ Ñû÷,&nbsp;âçÿë ó ìåíÿ èíòåðâüþ äëÿ ñâîåãî ïðîåêòà <a href="http://greatcoach.ru/">GreatCoach.ru</a>. Åãî âîïðîñû îêàçàëèñü äîâîëüíî èíòåðåñíûìè, è â ðåçóëüòàòå â ýòîì êîðîòêîì èíòåðâüþ ìíå óäàëîñü íå òîëüêî ðàññêàçàòü ñâîå âèäåíèå êîó÷èíãà, íî è ïîäåëèòñÿ íåêîòîðûìè ïðîôåññèîíàëüíûìè ñåêðåòàìè. Îñîáåííî ïðèìå÷àòåëüíûì áûëî òî, ÷òî íåïîñðåäñòâåííî ïåðåä ýòèì èíòåðüþ ÿ èìåë (êàê êëèåíò) ñîâåðøåííî ïîòðÿñàþùóþ êîó÷-ñåññèþ, êîòîðàÿ îêàçàëà î÷åíü ñèëüíîå âëèÿíèå íà ìîè äàëüíåéøèå ïëàíû è æèçíü â öåëîì. Òàê ÷òî èíòåðâüþ ïîëó÷èëîñü âåñüìà çàðÿæåííûì ;)</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Что такое коучинг? (интервью)</h1><a href=index1c5d.html?id=F477A class=slink>web-версия</a><p><span class='print'><p>
+	Несколько дней назад мой коллега - коуч и тренер НЛП, Денис Сыч,&nbsp;взял у меня интервью для своего проекта <a href="http://greatcoach.ru/">GreatCoach.ru</a>. Его вопросы оказались довольно интересными, и в результате в этом коротком интервью мне удалось не только рассказать свое видение коучинга, но и поделится некоторыми профессиональными секретами. Особенно примечательным было то, что непосредственно перед этим интерью я имел (как клиент) совершенно потрясающую коуч-сессию, которая оказала очень сильное влияние на мои дальнейшие планы и жизнь в целом. Так что интервью получилось весьма заряженным ;)</p>
 <p>
-	<a href="index.html?id=92"><strong>Ñêà÷àòü</strong></a> (5,3 Mb)</p>
+	<a href="index.html?id=92"><strong>Скачать</strong></a> (5,3 Mb)</p>
 <p>
-	<em>Åãîð Áóëûãèí,<br />
-	Äåíèñ Ñû÷</em></p>
+	<em>Егор Булыгин,<br />
+	Денис Сыч</em></p>
 <p>
-	<span style="font-size: smaller;"><em>29 ìàðòà 2010</em></span></p>
+	<span style="font-size: smaller;"><em>29 марта 2010</em></span></p>
 <p style="text-align: center;">
 	<span class="service"><a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -46,16 +46,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup53fa.html?id=F477A&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup815a.html?id=F477A&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup48d5.html?id=F477A&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupdf95.html?id=F477A&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupa016.html?id=F477A&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup53fa.html?id=F477A&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup815a.html?id=F477A&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup48d5.html?id=F477A&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupdf95.html?id=F477A&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupa016.html?id=F477A&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -78,12 +78,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div><div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Àóäèî&quot;</p> <ul><li><a href='F4AD9.html' title=''>Ñìåíà ïðîôåññèîíàëüíîé äåÿòåëüíîñòè</a></li><li><a href='F4AC0.html' title=''>Èíòóèöèÿ è áåññîçíàòåëüíîå</a></li><li><a href='F4ABF.html' title=''>Ðàáîòà ñ íåãàòèâíûìè ýìîöèÿìè, ñòðàõîì</a></li><li><a href='F4ADA.html' title=''>Áèçíåñ îáó÷åíèå</a></li><li><a href='F4ABE.html' title=''>Êàê ýôôåêòèâíî ó÷èòüñÿ íà òðåíèíãàõ?</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div><div class='relateditems'><p>Лучшие материалы раздела &quot;Аудио&quot;</p> <ul><li><a href='F4AD9.html' title=''>Смена профессиональной деятельности</a></li><li><a href='F4AC0.html' title=''>Интуиция и бессознательное</a></li><li><a href='F4ABF.html' title=''>Работа с негативными эмоциями, страхом</a></li><li><a href='F4ADA.html' title=''>Бизнес обучение</a></li><li><a href='F4ABE.html' title=''>Как эффективно учиться на тренингах?</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F477A" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -106,13 +106,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
  </span></p>
-</span><p><a href=index1c5d.html?id=F477A class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index1c5d.html?id=F477A class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -173,7 +173,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -195,7 +195,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
