--- a/print1c89.html
+++ b/print1c89.html
@@ -1,9 +1,9 @@
 <html>
-<title>Ñòàòüè è ìàòåðèàëû</title>
+<title>Статьи и материалы</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=32347D7E-F4267-B9D62464 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 12:55:46 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='íëï, ãèïíîç'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='нлп, гипноз'>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
@@ -14,14 +14,14 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ñòàòüè è ìàòåðèàëû</h1><a href=index1c89.html?id=32347D7E-F4267-B9D62464 class=slink>web-âåðñèÿ</a><p><span class='print'><p><font><ul><li><h2><a href='8A456F4F-F4241-F9B6E5D2.html'>ÍËÏ è ãèïíîç</a></h2>Ñòàòüè, òåõíèêè è äð. ìàòåðèàëû ïî ÍËÏ è DHE.</li><li><h2><a href='3D5D634B-F42A7-4825A88E.html'>Íîâûé Êîä ÍËÏ</a></h2>Ñòàòüè, òåõíèêè è êîíñïåêòû ïî Íîâîìó Êîäó ÍËÏ.</li><li><h2><a href='D4B82833-F4612-39FD98B1.html'>Êîó÷èíã</a></h2>Ìàòåðèàëû î êîó÷èíãå è èñïîëüçîâàíèè ÍËÏ â íåì.</li><li><h2><a href='716F4063-F45B9-4B9C778A.html'>Ñïèðàëüíàÿ Äèíàìèêà</a></h2>Ïîäáîðêà ìàòåðèàëîâ ïî Ñïèðàëüíîé Äèíàìèêå.</li><li><h2><a href='98F84D94-F45E7-FB454F52.html'>Èíòåãðàëüíàÿ ïñèõîëîãèÿ</a></h2>Ñòàòüè, êîíñïåêòû è äðóãèå ìàòåðèàëû ïî èíòåãðàëüíîé ïñèõîëîãèè.</li><li><h2><a href='11E0E292-F4297-CBD0453C.html'>Äëÿ ÍËÏåðîâ</a></h2>Ìàòåðèàëû, èìåþùèå ïðîôåññèîíàëüíóþ öåííîñòü. ßçûê îïèñàíèÿ ìîæåò áûòü íå ïîíÿòåí òåì,  êòî íå çíàêîì ñ ÍËÏ. </li><li><h2><a href='477C1BB3-F45E9-D845B29A.html'>Ýâîëþöèÿ ðàçóìà</a></h2>Ñòàòüè, ñèñòåìíî îïèñûâàþùèå ðàçâèòèå ÷åëîâåêà.</li><li><h2><a href='7BC8340A-F42C3-8F3965F4.html'>Ïðàêòè÷åñêàÿ ïñèõîëîãèÿ</a></h2>Ïðîñòûå ïðèåìû ÍËÏ è ïðàêòè÷åñêîé ïñèõîëîãèè äëÿ øèðîêîãî êðóãà ÷èòàòåëåé.</li><li><h2><a href='401DAD9C-F46D3-E86A6238.html'>Ìóæ÷èíà è æåíùèíà</a></h2>Ìàòåðèàëû, ïîñâÿùåííûå îòíîøåíèÿì ìåæäó ìóæ÷èíîé è æåíùèíîé.</li><li><h2><a href='F48A6.html'>Áèçíåñ, ìàðêåòèíã è ïðîäàæè</a></h2>×òî Âû ìîæåòå ñäåëàòü óæå ñåãîäíÿ, ÷òîáû óâåëè÷èòü ïðîäàæè è ïîâûñèòü ýôôåêòèâíîñòü ñâîåãî áèçíåñà. Íåò áèçíåñà? Óçíàéòå, êàê âû ìîæåòå îòêðûòü ñâîé ïåðâûé, ãàðàíòèðîâàííî óñïåøíûé áèçíåñ!</li><li><h2><a href='600117C7-F45F0-9F94D6EA.html'>Áàéêè è ïðèò÷è</a></h2>Êàæäàÿ ïðèò÷à - ýòî ìåòàôîðà, èìåþùàÿ íåñêîëüêî óðîâíåé ñìûñëà. Çäåñü íàõîäÿòñÿ ñïåöèàëüíî ïîäîáðàííûå ïðèò÷è.</li><li><h2><a href='audio.html'>Àóäèî</a></h2>Àóäèî-óïðàæíåíèÿ, òðàíñû</li><li><h2><a href='video.html'>Âèäåî</a></h2>Âèäåî ìàòåðèàëû, ôðàãìåíòû òðåíèíãîâ è äðóãèå.</li><li><h2><a href='3D9668D0-F436B-A3575E15.html'>Êíèãè è ñàìîó÷èòåëè</a></h2>Èçáðàííûå êíèãè è ñàìîó÷èòåëè.</li><li><h2><a href='1524DC52-F4651-2FB51D87.html'>Òåõíèêè</a></h2>Êîëëåêöèÿ òåõíèê ÍËÏ, ãèïíîçà è ñèñòåìíîãî ìûøëåíèÿ íà âñå ñëó÷àè æèçíè.</li><li><h2><a href='DAEF12B9-F4495-77F033C8'>Èãðû Íîâîãî Êîäà ÍËÏ</a></h2>Ýëåêòðîííûå Èãðû Íîâîãî Êîäà ÍËÏ.</li><li><h2><a href='F4C1F.html'>Ïðåäíàçíà÷åíèå è ñàìîðåàëèçàöèÿ</a></h2>Ñåðèÿ ñòàòåé î ëè÷íîé ðåàëèçîâàííîñòè è ïðåäíàçíà÷åíèè</li><li><h2><a href='blog.html'>Áëîã ñàéòà</a></h2>Ìåñòî, ãäå ìîæíî ïîîáùàòüñÿ.</li><li><h2><a href='F4D6A.html'>NLPING</a></h2></li></ul></font></p>
-</span><p><a href=index1c89.html?id=32347D7E-F4267-B9D62464 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Статьи и материалы</h1><a href=index1c89.html?id=32347D7E-F4267-B9D62464 class=slink>web-версия</a><p><span class='print'><p><font><ul><li><h2><a href='8A456F4F-F4241-F9B6E5D2.html'>НЛП и гипноз</a></h2>Статьи, техники и др. материалы по НЛП и DHE.</li><li><h2><a href='3D5D634B-F42A7-4825A88E.html'>Новый Код НЛП</a></h2>Статьи, техники и конспекты по Новому Коду НЛП.</li><li><h2><a href='D4B82833-F4612-39FD98B1.html'>Коучинг</a></h2>Материалы о коучинге и использовании НЛП в нем.</li><li><h2><a href='716F4063-F45B9-4B9C778A.html'>Спиральная Динамика</a></h2>Подборка материалов по Спиральной Динамике.</li><li><h2><a href='98F84D94-F45E7-FB454F52.html'>Интегральная психология</a></h2>Статьи, конспекты и другие материалы по интегральной психологии.</li><li><h2><a href='11E0E292-F4297-CBD0453C.html'>Для НЛПеров</a></h2>Материалы, имеющие профессиональную ценность. Язык описания может быть не понятен тем,  кто не знаком с НЛП. </li><li><h2><a href='477C1BB3-F45E9-D845B29A.html'>Эволюция разума</a></h2>Статьи, системно описывающие развитие человека.</li><li><h2><a href='7BC8340A-F42C3-8F3965F4.html'>Практическая психология</a></h2>Простые приемы НЛП и практической психологии для широкого круга читателей.</li><li><h2><a href='401DAD9C-F46D3-E86A6238.html'>Мужчина и женщина</a></h2>Материалы, посвященные отношениям между мужчиной и женщиной.</li><li><h2><a href='F48A6.html'>Бизнес, маркетинг и продажи</a></h2>Что Вы можете сделать уже сегодня, чтобы увеличить продажи и повысить эффективность своего бизнеса. Нет бизнеса? Узнайте, как вы можете открыть свой первый, гарантированно успешный бизнес!</li><li><h2><a href='600117C7-F45F0-9F94D6EA.html'>Байки и притчи</a></h2>Каждая притча - это метафора, имеющая несколько уровней смысла. Здесь находятся специально подобранные притчи.</li><li><h2><a href='audio.html'>Аудио</a></h2>Аудио-упражнения, трансы</li><li><h2><a href='video.html'>Видео</a></h2>Видео материалы, фрагменты тренингов и другие.</li><li><h2><a href='3D9668D0-F436B-A3575E15.html'>Книги и самоучители</a></h2>Избранные книги и самоучители.</li><li><h2><a href='1524DC52-F4651-2FB51D87.html'>Техники</a></h2>Коллекция техник НЛП, гипноза и системного мышления на все случаи жизни.</li><li><h2><a href='DAEF12B9-F4495-77F033C8'>Игры Нового Кода НЛП</a></h2>Электронные Игры Нового Кода НЛП.</li><li><h2><a href='F4C1F.html'>Предназначение и самореализация</a></h2>Серия статей о личной реализованности и предназначении</li><li><h2><a href='blog.html'>Блог сайта</a></h2>Место, где можно пообщаться.</li><li><h2><a href='F4D6A.html'>NLPING</a></h2></li></ul></font></p>
+</span><p><a href=index1c89.html?id=32347D7E-F4267-B9D62464 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -82,7 +82,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -104,7 +104,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
