--- a/print1eed.html
+++ b/print1eed.html
@@ -1,9 +1,9 @@
 <html>
-<title>Îòçûâû î ðàáîòå Êîíñòàíòèíà Ïóõîâà</title>
+<title>Отзывы о работе Константина Пухова</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C53 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:14:01 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Îòçûâû î ðàáîòå Êîíñòàíòèíà Ïóõîâà'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Отзывы о работе Константина Пухова'>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
@@ -14,40 +14,40 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Îòçûâû î ðàáîòå Êîíñòàíòèíà Ïóõîâà</h1><a href=index1eed.html?id=F4C53 class=slink>web-âåðñèÿ</a><p><span class='print'><div class="tip">
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Отзывы о работе Константина Пухова</h1><a href=index1eed.html?id=F4C53 class=slink>web-версия</a><p><span class='print'><div class="tip">
 	<p>
-		Êîíñòàíòèí Ïóõîâ - ïî ìîåìó ìíåíèþ ìóäðûé ÷åëîâåê. Ãèïíîç â åãî èíòåðïðåòàöèè&nbsp;ïðîñòî âåëèêîëåïåí, î÷åíü ìíîãî èíòåðåñíîãî è óäèâèòåëüíîãî îòêðûâàåòñÿ ïåðåä êàæäûì ïðèøåäøåì&nbsp;íà ñåìèíàð ïî Ý.Ã.</p>
+		Константин Пухов - по моему мнению мудрый человек. Гипноз в его интерпретации&nbsp;просто великолепен, очень много интересного и удивительного открывается перед каждым пришедшем&nbsp;на семинар по Э.Г.</p>
 	<p>
-		Òå ëþäè ñ êîòîðûìè ÿ ïðîõîäèë ãèïíîç, âûñîêîãî ìíåíèÿ î ïðåïîäàâàòåëüñêîì ìàñòåðñòâå Êîíñòàíòèíà.&nbsp;Ìíîãèå âîçâðàùàþòñÿ íà ñåìèíàðû ê íåìó, òàê êàê ñ êàæäûì íîâûì ïðèåçäîì Ê. Ïóõîâ ïðèâîçèò ñ ñîáîé&nbsp;íîâûå âåÿíèÿ Ýðèêñîíîâñêîãî Ãèïíîçà è äåëèòñÿ ñâîèìè âïå÷àòëåíèÿìè î íàó÷íûõ èññëåäîâàíèÿõ&nbsp;çà ïîñëåäíåå âðåìÿ. ×òî î÷åíü âàæíî, òàê ýòî òî, ÷òî îí íå îñòàíàâëèâàåòñÿ íà äîñòèãíóòîì è&nbsp;ïðîäîëæàåò àêòèâíî ïîñåùàòü ñåìèíàðû òàêèõ ìýòðîâ ãèïíîòåðàïèè êàê Æ.Ãîäýí, Æ.Áåêêèî, Á.Ýðèêñîí.</p>
+		Те люди с которыми я проходил гипноз, высокого мнения о преподавательском мастерстве Константина.&nbsp;Многие возвращаются на семинары к нему, так как с каждым новым приездом К. Пухов привозит с собой&nbsp;новые веяния Эриксоновского Гипноза и делится своими впечатлениями о научных исследованиях&nbsp;за последнее время. Что очень важно, так это то, что он не останавливается на достигнутом и&nbsp;продолжает активно посещать семинары таких мэтров гипнотерапии как Ж.Годэн, Ж.Беккио, Б.Эриксон.</p>
 	<p>
-		È õîòü ÿ è ïðîõîäèë óæå ÝÃ, ìîãó ñêàçàòü, ÷òî ñ áîëüøèì óäîâîëüñòâèåì ïðîõîæó åãî åù¸ ðàç è ïîëó÷àþ&nbsp;áåñêîíå÷íîå óäîâîëüñòâèå îò îíîãî, òàê êàê Êîíñòàíòèí ïîñòîÿííî íàñûùàåò îáó÷åíèå íîâûì.</p>
+		И хоть я и проходил уже ЭГ, могу сказать, что с большим удовольствием прохожу его ещё раз и получаю&nbsp;бесконечное удовольствие от оного, так как Константин постоянно насыщает обучение новым.</p>
 	<p>
-		Â åãî ìàíåðå ïðåïîäîâàíèÿ çàëîæåíî ìíîæåñòâî ïðèìåðîâ èç æèçíè,&nbsp;èç ñâîåé ïðàêòèêè è íå òîëüêî: ìåòàôîðè÷åñêèå èñòîðèè, àíåêäîòû, àôîðèçìû è ìíîãîå-ìíîãîå äðóãîå.</p>
+		В его манере преподования заложено множество примеров из жизни,&nbsp;из своей практики и не только: метафорические истории, анекдоты, афоризмы и многое-многое другое.</p>
 	<p>
-		×òî åù¸ ñòîèò îòìåòèòü, ýòî àòìîñôåðó, êîòîðàÿ öàðèò â àóäèòîðèè. Ìàëî ãäå åñòü òàêàÿ äîáðàÿ è ñâåòëàÿ&nbsp;àòìîñôåðà, êîòîðàÿ ïîçâîëÿåò ñâîáîäíî ñåáÿ îùóùàòü íà ñåìèíàðå.</p>
+		Что ещё стоит отметить, это атмосферу, которая царит в аудитории. Мало где есть такая добрая и светлая&nbsp;атмосфера, которая позволяет свободно себя ощущать на семинаре.</p>
 	<p>
-		Ê.Ïóõîâ óäåëÿåò âíèìàíèå êàæäîìó ó÷àñòíèêó ñåìèíàðà, íåçàâèñèìî îò âîçðàñòà èëè ñòàòóñà&nbsp;÷åëîâåêà ïðèøåäøåãî íà ñåìèíàð. Êîíñóëüòèðóåò,&nbsp;ïîìîãàåò â ðåøåíèÿõ âñÿ÷åñêèõ íå êîìôîðòíûõ æèçíåííûõ ñèòóàöèé, ðàñêðûâàåò ñïîñîáíîñòè ÷åëîâåêà.</p>
+		К.Пухов уделяет внимание каждому участнику семинара, независимо от возраста или статуса&nbsp;человека пришедшего на семинар. Консультирует,&nbsp;помогает в решениях всяческих не комфортных жизненных ситуаций, раскрывает способности человека.</p>
 	<p>
-		Âîîáùåì Ýðèêñîíîâñêèé ãèïíîç â èñïîëíåíèå Ê.Ïóõîâà - òâîð÷åñêèé øåäåâð!</p>
+		Вообщем Эриксоновский гипноз в исполнение К.Пухова - творческий шедевр!</p>
 	<p>
-		ß íå çíàþ çà÷åì îí &quot;âàì&quot; íóæåí... (ß èìåþ ââèäó ãèïíîç.)&nbsp;Êàæäûé ÷åëîâåê íà ñåìèíàð ïî ãèïíîçó ïðèíîñèò ñâîè öåëè è çàäà÷è.&nbsp;Â ìîåé ñèòóàöèè öåëè áûëè òàêîâû: óïðàâëåíèå ñîñòîÿíèÿìè è ýìîöèÿìè,&nbsp;óëó÷øåíèå êîìóíèêàöèè, ðàçáîð è ðåøåíèå ìîèõ îïðåäåë¸ííûõ íå êîìôîðòíûõ ñîñòîÿíèé.</p>
+		Я не знаю зачем он &quot;вам&quot; нужен... (Я имею ввиду гипноз.)&nbsp;Каждый человек на семинар по гипнозу приносит свои цели и задачи.&nbsp;В моей ситуации цели были таковы: управление состояниями и эмоциями,&nbsp;улучшение комуникации, разбор и решение моих определённых не комфортных состояний.</p>
 	<p>
-		Ñêàçàòü ÷åñòíî, ÿ äîáèëñÿ îïðåäåë¸ííûõ ðåçóëüòàòîâ è ãîòîâ äâèãàòüñÿ äàëüøå!</p>
+		Сказать честно, я добился определённых результатов и готов двигаться дальше!</p>
 	<p>
-		Ðåøàéòå ñàìè, âñ¸ â âàøèõ ðóêàõ, åñëè ñ÷èòàåòå, ÷òî âàì ýòî íóæíî, òî âïåð¸ä!!! Æåëàþ óäà÷è.<br />
-		Âñåõ áëàã.</p>
+		Решайте сами, всё в ваших руках, если считаете, что вам это нужно, то вперёд!!! Желаю удачи.<br />
+		Всех благ.</p>
 	<p style="text-align: right; ">
-		<em><span style="color:#a9a9a9;">Îòçûâ îñòàâëåí ïîëüçîâàòåëåì MTF íà ôîðóìå </span><a href="http://nlpnews.ru/forum/index.php?showtopic=2426"><span style="color:#a9a9a9;">nlpnews.ru</span></a></em></p>
+		<em><span style="color:#a9a9a9;">Отзыв оставлен пользователем MTF на форуме </span><a href="http://nlpnews.ru/forum/index.php?showtopic=2426"><span style="color:#a9a9a9;">nlpnews.ru</span></a></em></p>
 </div>
 <p>
 	&nbsp;</p>
-</span><p><a href=index1eed.html?id=F4C53 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index1eed.html?id=F4C53 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -108,7 +108,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -130,7 +130,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
