--- a/index13cd.html
+++ b/index13cd.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="(Самая глобальная "сказка" для взрослых) Каждый Лидер на пути своего развития встречается с семью внутренними «драконами». «Дракон» - это знание, открывающееся Лидеру, когда он достигает очередного этапа лидерской зрелости. Оно наделяет Лидера силой и влиянием, а взамен берет свою плату. Но лидер не может увидеть эту плату, пока..." />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
