--- a/print113a.html
+++ b/print113a.html
@@ -2,7 +2,7 @@
 <title>Принести свет в темноту: Принцип позитивного намерения</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=41141A62-F44A3-E49A15E7 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:30:24 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Роберт Дилтс об одном из основных принципов НЛП.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
