--- a/print11c6.html
+++ b/print11c6.html
@@ -1,10 +1,10 @@
 <html>
-<title>Æèâûå òðåíèíãè</title>
+<title>Живые тренинги</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=E473C076-F4245-A5C815B7 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 12:55:50 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='òðåíèíã, íëï òðåíèíãè'>
-<meta name="description" content='Îòêðûòûå æèâûå ÍËÏ òðåíèíãè è èíòåðíåò òðåíèíãè (âåáèíàðû).'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='тренинг, нлп тренинги'>
+<meta name="description" content='Открытые живые НЛП тренинги и интернет тренинги (вебинары).'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Æèâûå òðåíèíãè</h1><a href=index11c6.html?id=E473C076-F4245-A5C815B7 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	<ul><li><h2><a href='nlp-praktik'>ÍËÏ ïðàêòèê äëÿ ðóêîâîäèòåëåé</a></h2>"Brain Tuning" - ÍËÏ-ïðàêòèê äëÿ ðóêîâîäèòåëåé. Ýêñêëþçèâíûé àâòîðñêèé êóðñ Òàòüÿíû Ìóæèöêîé, îáó÷àþùèé òåõíèêàì ÍËÏ â êîììóíèêàöèè è ëè÷íîé ýôôåêòèâíîñòè. Êóðñ ñîñòîèò èç 8 ìîäóëåé ïî 2 äíÿ (ñá-âñ), ïðîâîäÿùèõñÿ 1 ðàç â ìåñÿö è ìåæìîäóëüíûõ çàíÿòèé. Ó÷àñòèå âîçìîæíî êàê âæèâóþ, òàê è â îíëàéí-ãðóïïå (âèäåî-òðàíñëÿöèÿ, âîïðîñû ÷åðåç ÷àò).</li><li><h2><a href='http://lp.nlponline.org/?utm_source=nlping_menu'>Êóðñ "ÍËÏ îíëàéí"</a></h2></li><li><h2><a href='mozg2'>Ìîçã 2.0: Ðóêîâîäñòâî ïî ýêñïëóàòàöèè</a></h2>Ìîçã 2.0: Ðóêîâîäñòâî ïî ýêñïëóàòàöèè</li><li><h2><a href='7ul_2013.html'>7 óðîâíåé ëèäåðñòâà (æèâîé òðåíèíã)</a></h2>Â òå÷åíèå 30 ëåò Êëýð Ãðýéâç èññëåäîâàë áîëåå 50.000 ÷åëîâåê è îáíàðóæèë, ÷òî âñå ëþäè â õîäå ñâîåãî ðàçèòèÿ ïðîõîäÿò îäèí è òîò æå ìàðøðóò. Ýòîò "ìàðøðóò" ñîñòîèò èç åäèíûõ 8 ýòàïîâ - 8 óðîâíåé ìûøëåíèÿ. È êàæäîìó óðîâíþ ñîîòâåòñòâóþò ñâîè öåííîñòè, ñâîè ìîòèâû... è ñâîå êîíêðåòíîå ïîâåäåíèå, ïðåäñêàçóåìîå ñ òî÷íîñòüþ äî ðåàêöèè.</li><li><h2><a href='trainers.html'>Òðåíåðû</a></h2>Ïîäðîáíûå ðåçþìå íàøèõ òðåíåðîâ</li><li><h2><a href='coaching.html'>Êîó÷èíã</a></h2>Ñêàéï-êîó÷èíã (èëè êîíñóëüòàöèÿ, â çàâèñèìîñòè îò òîãî, ÷òî Âàì íóæíî)</li><li><h2><a href='nlp-master.html'>ÍËÏ-Ìàñòåð</a></h2>Ýêñêëþçèâíûé êóðñ Åãîðà Áóëûãèíà "ÍËÏ-ìàñòåð" äëÿ ðóêîâîäèòåëåé.</li></ul></p>
-</span><p><a href=index11c6.html?id=E473C076-F4245-A5C815B7 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Живые тренинги</h1><a href=index11c6.html?id=E473C076-F4245-A5C815B7 class=slink>web-версия</a><p><span class='print'><p>
+	<ul><li><h2><a href='nlp-praktik'>НЛП практик для руководителей</a></h2>"Brain Tuning" - НЛП-практик для руководителей. Эксклюзивный авторский курс Татьяны Мужицкой, обучающий техникам НЛП в коммуникации и личной эффективности. Курс состоит из 8 модулей по 2 дня (сб-вс), проводящихся 1 раз в месяц и межмодульных занятий. Участие возможно как вживую, так и в онлайн-группе (видео-трансляция, вопросы через чат).</li><li><h2><a href='http://lp.nlponline.org/?utm_source=nlping_menu'>Курс "НЛП онлайн"</a></h2></li><li><h2><a href='mozg2'>Мозг 2.0: Руководство по эксплуатации</a></h2>Мозг 2.0: Руководство по эксплуатации</li><li><h2><a href='7ul_2013.html'>7 уровней лидерства (живой тренинг)</a></h2>В течение 30 лет Клэр Грэйвз исследовал более 50.000 человек и обнаружил, что все люди в ходе своего разития проходят один и тот же маршрут. Этот "маршрут" состоит из единых 8 этапов - 8 уровней мышления. И каждому уровню соответствуют свои ценности, свои мотивы... и свое конкретное поведение, предсказуемое с точностью до реакции.</li><li><h2><a href='trainers.html'>Тренеры</a></h2>Подробные резюме наших тренеров</li><li><h2><a href='coaching.html'>Коучинг</a></h2>Скайп-коучинг (или консультация, в зависимости от того, что Вам нужно)</li><li><h2><a href='nlp-master.html'>НЛП-Мастер</a></h2>Эксклюзивный курс Егора Булыгина "НЛП-мастер" для руководителей.</li></ul></p>
+</span><p><a href=index11c6.html?id=E473C076-F4245-A5C815B7 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
