--- a/print1223.html
+++ b/print1223.html
@@ -2,7 +2,7 @@
 <title>Когда у Вас есть все знания, чего не хватает для старта?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4AAC by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:38 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='Когда у Вас есть все знания, чего не хватает для старта? Для чего 1000 человек соберутся этой осенью в одном месте и что они там будут делать? Или как заработать 1.000.000$ за год с нуля и совершено без вложений.'>
 <meta name="description" content='Для чего 1000 человек соберутся этой осенью в одном месте и что они там будут делать? Или как заработать 1.000.000$ за год с нуля и совершено без вложений.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
