--- a/print12ac.html
+++ b/print12ac.html
@@ -2,7 +2,7 @@
 <title>Два правила лучшего тренинга</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A18 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:27 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='лучшие тренинги'>
 <meta name="description" content='Что нужно сделать начинающему тренеру, чтобы создать востребованный тренинг.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
