--- a/print14e2.html
+++ b/print14e2.html
@@ -2,7 +2,7 @@
 <title>7 стадий зрелости Лидера</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A6D by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:13 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Чем является Ваше лидерство сейчас? И что будет Вашим следующим этапом развития, как Лидера?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
