--- a/print16dc.html
+++ b/print16dc.html
@@ -1,10 +1,10 @@
 <html>
-<title>Áåññîçíàòåëüíûé òåñò î Âàøåé ðàáîòå</title>
+<title>Бессознательный тест о Вашей работе</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F48AB by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:09 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Êàê Âû âîñïðèíèìàåòå ñâîþ ðàáîòó íà áåññîçíàòåëüíîì óðîâíå?'>
+<meta name="description" content='Как Вы воспринимаете свою работу на бессознательном уровне?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,29 +14,29 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Áåññîçíàòåëüíûé òåñò î Âàøåé ðàáîòå</h1><a href=index16dc.html?id=F48AB class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	Ïîäóìàéòå î ñâîåé ðàáîòå - âñïîìíèòå, êàê Âû ñèäèòå â îôèñå (èëè ïðîñòî îãëÿäèòåñü âîêðóã, áðîñüòå âçãëÿä íà ðàáî÷èå ôàéëû, ñïèñîê äåë è ò.ä.). Ïðîáåãèòåñü â ïàìÿòè ïî ïðîøåäøèì ðàáî÷èì äíÿì.<br />
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Бессознательный тест о Вашей работе</h1><a href=index16dc.html?id=F48AB class=slink>web-версия</a><p><span class='print'><p>
+	Подумайте о своей работе - вспомните, как Вы сидите в офисе (или просто оглядитесь вокруг, бросьте взгляд на рабочие файлы, список дел и т.д.). Пробегитесь в памяти по прошедшим рабочим дням.<br />
 	<br />
-	À çàòåì çàêðîéòå ãëàçà è ïðåäñòàâüòå, ÷òî ó âàñ â ðóêàõ çàêðûòûé êðûøêîé ñîñóä, ñèìâîëèçèðóþùèé Âàøó ðàáîòó.<br />
+	А затем закройте глаза и представьте, что у вас в руках закрытый крышкой сосуд, символизирующий Вашу работу.<br />
 	<br />
-	Èíòåðåñíî, êàêîé îí âíåøíå? Ðàçãëÿäèòå åãî âíèìàòåëüíî, âñå ÷òî Âû óâèäèòå - âàæíî.<br />
+	Интересно, какой он внешне? Разглядите его внимательно, все что Вы увидите - важно.<br />
 	<br />
-	À çàòåì îòêðîéòå êðûøêó è çàãëÿíèòå âíóòðü. ×òî òàì?<br />
+	А затем откройте крышку и загляните внутрь. Что там?<br />
 	<br />
-	Ïîíþõàéòå çàïàõ ñîäåðæèìîãî, ïîðîáóéòå åãî íà âêóñ, íàëåéòå íåìíîãî â ëàäîíü&hellip;<br />
+	Понюхайте запах содержимого, поробуйте его на вкус, налейте немного в ладонь&hellip;<br />
 	<br />
-	Ñòàëè áû Âû ïèòü ýòî êàæäûé äåíü? ;)<br />
+	Стали бы Вы пить это каждый день? ;)<br />
 	<br />
-	<a class='spoiler' style='text-decoration: none; border-bottom: 1px dotted' href='javascript:void(0);' onclick="javascript:if(document.getElementById('s123').style.display == 'none') document.getElementById('s123').style.display=''; else document.getElementById('s123').style.display='none';"><strong>ðàñøèôðîâêà òåñòà (÷èòàòü òîëüêî ïîñëå âûïîëíåíèÿ)</strong></a><div id='s123' style='display: none;'><br />
-	Òî, êàê âûãëÿäèò ñîñóä - ýòî ïðåçåíòàáåëüíîñòü Âàøåé ðàáîòû. Êàê Âû åå âîñïðèíèìàåòå è/èëè êàê ïîêàçûâàåòå äðóãèì ëþäÿì.<br />
+	<a class='spoiler' style='text-decoration: none; border-bottom: 1px dotted' href='javascript:void(0);' onclick="javascript:if(document.getElementById('s123').style.display == 'none') document.getElementById('s123').style.display=''; else document.getElementById('s123').style.display='none';"><strong>расшифровка теста (читать только после выполнения)</strong></a><div id='s123' style='display: none;'><br />
+	То, как выглядит сосуд - это презентабельность Вашей работы. Как Вы ее воспринимаете и/или как показываете другим людям.<br />
 	<br />
-	Ñîäåðæèìîå ñîñóäà - ýòî òî, ÷åì ðåàëüíî ÿâëÿåòñÿ äëÿ Âàñ Âàøà ðàáîòà. Âêëþ÷àÿ äåòàëè âêóñà è çàïàõà.<br />
+	Содержимое сосуда - это то, чем реально является для Вас Ваша работа. Включая детали вкуса и запаха.<br />
 	<br />
-	Èíòåðïðåòàöèÿ âñåõ äåòàëåé â ýòîì òåñòå äåëàåòñÿ ïî ïðÿìîé àíàëîãèè. Íî òîëüêî ëè÷íî Âàìè (òàê êàê êàæäûé ÷åëîâåê ïðèäàåò âåùàì ñâîè ëè÷íûå ñìûñëû). Åñëè ÷òî-òî íå ÿâëÿåòÿ î÷åâèäíûì, òî ïðîñòî ïîñìîòðèòå, êàêèå ÷óâñòâà â Âàñ âûçûâàåò ýòà äåòàëü, è ýòî áóäåò îòâåòîì.<br />
+	Интерпретация всех деталей в этом тесте делается по прямой аналогии. Но только лично Вами (так как каждый человек придает вещам свои личные смыслы). Если что-то не являетя очевидным, то просто посмотрите, какие чувства в Вас вызывает эта деталь, и это будет ответом.<br />
 	</div><br />
-	<strong>P.S.</strong> Ñäåëàéòå èç ðåçóëüòàòîâ âûâîäû, è åñëè îíè äëÿ Âàñ íå çâó÷àò êàê îäíîçíà÷íîå &quot;Ñóïåð!&quot;, ñïðîñèòå ñåáÿ: &quot;À ÷åãî ÿ õî÷ó íà ñàìîì äåëå?&quot;. Â êîíöå êîíöîâ æèçíü ó íàñ îäíà, ÷òîáû ïðîæèòü åå â íåïðåðûâíîì êîìïðîìèñå.</p>
+	<strong>P.S.</strong> Сделайте из результатов выводы, и если они для Вас не звучат как однозначное &quot;Супер!&quot;, спросите себя: &quot;А чего я хочу на самом деле?&quot;. В конце концов жизнь у нас одна, чтобы прожить ее в непрерывном компромисе.</p>
 <p style="text-align: right;">
-	Åãîð Áóëûãèí<br />
+	Егор Булыгин<br />
 	11.03.2011</p>
 <p style="text-align: center;">
 	<a name='vote'></a><script type='text/javascript'>
@@ -61,16 +61,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup9424.html?id=F48AB&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupbafb.html?id=F48AB&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup3a8a.html?id=F48AB&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupd899.html?id=F48AB&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup2aed.html?id=F48AB&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup9424.html?id=F48AB&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupbafb.html?id=F48AB&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup3a8a.html?id=F48AB&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupd899.html?id=F48AB&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup2aed.html?id=F48AB&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -93,12 +93,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Ïðàêòè÷åñêàÿ ïñèõîëîãèÿ&quot;</p> <ul><li><a href='9ECA3D61-F4288-CB0CCCDB.html' title='Ïî÷åìó æåëàíèÿ ñáûâàþòñÿ? Âåðíåå, ïî÷åìó îäíè æåëàíèÿ ñáûâàþòñÿ, äðóãèå íåò? È ãäå òî âîëøåáíîå çàêëèíàíèå, êîòîðîå ñïîñîáñòâóåò cáû÷å ìå÷ò? '>Èñïîëíåíèå æåëàíèé - ìèñòèêà èëè èñêóññòâî ñèñòåìíî ìûñëèòü?</a></li><li><a href='4DFA878B-F4689-9A199D40.html' title='Ñòàòüÿ ïðî òî, êàê äåëàòü ñëîâà æèâûìè.'>Ýìîöèè è ÍËÏ. Êàê ðàáîòàþò ìåòàñîîáùåíèÿ.</a></li><li><a href='AE2269DD-F4360-627877D4.html' title='Êàê âèäåòü òî, ÷òî ñòîèò çà ñëîâàìè, êîòîðûå ãîâîðÿò ëþäè.'>Êàê íàó÷èòüñÿ ÷èòàòü ÷óæèå ìûñëè: ðóêîâîäñòâî ïîëüçîâàòåëÿ</a></li><li><a href='282B8268-F43A2-F49EE280.html' title='Äàæå ñàìûì ëó÷øèì ñîòðóäíèêàì ïîâûøàòü çàðïëàòó äî áåñêîíå÷íîñòè íåâîçìîæíî, è â êàêîé-òî ìîìåíò ïîÿâëÿåòñÿ ðèñê, ÷òî äðóãèå êîìïàíèè ìîãóò ïåðåìàíèòü ëó÷øèõ ñîòðóäíèêîâ. ×òî ìîæíî ñäåëàòü, ÷òîáû óäåðæàòü öåííûå êàäðû ó ñåáÿ â êîìïàíèè? Äåíüãè, ýòî íå åäèíñòâåííàÿ öåííîñòü, êîòîðàÿ íóæíà ëþäÿì...'>Òðè âàëþòû íå ñ÷èòàÿ äåíåã</a></li><li><a href='BF716F22-F435D-9DC90B05.html' title='Ñòàòüÿ Òàòüÿíû Ìóæèöêîé î ïîíèìàíèè ìåæäó ëþäüìè.'>Ðàçãîâîð ïî ïîíÿòèÿì</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Практическая психология&quot;</p> <ul><li><a href='9ECA3D61-F4288-CB0CCCDB.html' title='Почему желания сбываются? Вернее, почему одни желания сбываются, другие нет? И где то волшебное заклинание, которое способствует cбыче мечт? '>Исполнение желаний - мистика или искусство системно мыслить?</a></li><li><a href='4DFA878B-F4689-9A199D40.html' title='Статья про то, как делать слова живыми.'>Эмоции и НЛП. Как работают метасообщения.</a></li><li><a href='AE2269DD-F4360-627877D4.html' title='Как видеть то, что стоит за словами, которые говорят люди.'>Как научиться читать чужие мысли: руководство пользователя</a></li><li><a href='282B8268-F43A2-F49EE280.html' title='Даже самым лучшим сотрудникам повышать зарплату до бесконечности невозможно, и в какой-то момент появляется риск, что другие компании могут переманить лучших сотрудников. Что можно сделать, чтобы удержать ценные кадры у себя в компании? Деньги, это не единственная ценность, которая нужна людям...'>Три валюты не считая денег</a></li><li><a href='BF716F22-F435D-9DC90B05.html' title='Статья Татьяны Мужицкой о понимании между людьми.'>Разговор по понятиям</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F48AB" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -121,13 +121,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
 </p>
-</span><p><a href=index16dc.html?id=F48AB class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index16dc.html?id=F48AB class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -188,7 +188,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -210,7 +210,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
