--- a/print1779.html
+++ b/print1779.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ôîòî ñ òðåíèíãîâ Åãîðà Áóëûãèíà</title>
+<title>Фото с тренингов Егора Булыгина</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=trainings_photo_collection by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:14:01 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='òðåíèíã, íëï'>
-<meta name="description" content='Êîëëåêöèÿ ëó÷øèõ ôîòî ñ òðåíèíãîâ Åãîðà Áóëûãèíà'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='тренинг, нлп'>
+<meta name="description" content='Коллекция лучших фото с тренингов Егора Булыгина'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,61 +14,61 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ôîòî ñ òðåíèíãîâ Åãîðà Áóëûãèíà</h1><a href=index1779.html?id=trainings_photo_collection class=slink>web-âåðñèÿ</a><p><span class='print'><p style="text-align: right; ">
-	Äðóãèå ôîòî Âû ìîæåòå ïîñìîòðåòü <a href="http://www.facebook.com/egor.bulygin/photos">çäåñü</a>.</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Фото с тренингов Егора Булыгина</h1><a href=index1779.html?id=trainings_photo_collection class=slink>web-версия</a><p><span class='print'><p style="text-align: right; ">
+	Другие фото Вы можете посмотреть <a href="http://www.facebook.com/egor.bulygin/photos">здесь</a>.</p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã &quot;Ñîçäàíèå ðåàëüíîñòè&quot; Â Àìñòåðäàìå" src="img/SR-photo1.jpg" style="width: 600px; height: 450px; " /></p>
+	<img alt="Тренинг &quot;Создание реальности&quot; В Амстердаме" src="img/SR-photo1.jpg" style="width: 600px; height: 450px; " /></p>
 <p style="text-align: center;">
-	<img alt="&quot;Ñàìûé ëó÷øèé òðåíèíã&quot;" src="img/best_training-photo3.jpg" style="width: 600px; height: 400px; " /></p>
+	<img alt="&quot;Самый лучший тренинг&quot;" src="img/best_training-photo3.jpg" style="width: 600px; height: 400px; " /></p>
 <p style="text-align: center;">
-	<img alt="&quot;Ñàìûé ëó÷øèé òðåíèíã&quot;" src="img/best_training-photo4.jpg" style="width: 600px; height: 400px; " /></p>
+	<img alt="&quot;Самый лучший тренинг&quot;" src="img/best_training-photo4.jpg" style="width: 600px; height: 400px; " /></p>
 <p style="text-align: center;">
-	<img alt="&quot;Ñàìûé ëó÷øèé òðåíèíã&quot;" src="img/best_training-photo2.jpg" style="width: 600px; height: 400px; " /></p>
+	<img alt="&quot;Самый лучший тренинг&quot;" src="img/best_training-photo2.jpg" style="width: 600px; height: 400px; " /></p>
 <p style="text-align: center;">
-	<img alt="&quot;Ñàìûé ëó÷øèé òðåíèíã&quot;" src="img/best_training-photo1.jpg" style="width: 600px; height: 400px; " /></p>
+	<img alt="&quot;Самый лучший тренинг&quot;" src="img/best_training-photo1.jpg" style="width: 600px; height: 400px; " /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã &quot;7 óðîâíåé ëèäåðñòâà&quot;" src="img/7ll-photo4.jpg" style="width: 600px; height: 400px; " /></p>
+	<img alt="Тренинг &quot;7 уровней лидерства&quot;" src="img/7ll-photo4.jpg" style="width: 600px; height: 400px; " /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã &quot;7 óðîâíåé ëèäåðñòâà&quot;" src="img/7ll-photo3.jpg" style="width: 600px; height: 400px; " /></p>
+	<img alt="Тренинг &quot;7 уровней лидерства&quot;" src="img/7ll-photo3.jpg" style="width: 600px; height: 400px; " /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã &quot;7 óðîâíåé ëèäåðñòâà&quot;" src="img/7ll-photo2.jpg" style="width: 600px; height: 400px; " /></p>
+	<img alt="Тренинг &quot;7 уровней лидерства&quot;" src="img/7ll-photo2.jpg" style="width: 600px; height: 400px; " /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã &quot;7 óðîâíåé ëèäåðñòâà&quot;" src="img/7ll-photo1.jpg" style="width: 600px; height: 400px; " /></p>
+	<img alt="Тренинг &quot;7 уровней лидерства&quot;" src="img/7ll-photo1.jpg" style="width: 600px; height: 400px; " /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Òîëüÿòòè" src="img/photo/19072008_2.jpg" style="height: 452px; width: 600px; " title="Òîëüÿòòè" /></p>
+	<img alt="Тренинг в Тольятти" src="img/photo/19072008_2.jpg" style="height: 452px; width: 600px; " title="Тольятти" /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Íîâîñèáèðñêå" src="img/photo/novosibirsk_26012008-1.jpg" style="width: 600px; height: 423px; " title="Íîâîñèáèðñê" /></p>
+	<img alt="Тренинг в Новосибирске" src="img/photo/novosibirsk_26012008-1.jpg" style="width: 600px; height: 423px; " title="Новосибирск" /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Òîëüòÿòòè" src="img/photo/toljatti_21122007_2.gif" style="height: 422px; width: 600px; " title="Òîëüòÿòòè" /></p>
+	<img alt="Тренинг в Тольтятти" src="img/photo/toljatti_21122007_2.gif" style="height: 422px; width: 600px; " title="Тольтятти" /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Ñîôèè, Áîëãàðèÿ" src="img/photo/sofia_281006.jpg" style="height: 414px; width: 600px; " title="Ñîôèÿ, Áîëãàðèÿ" /></p>
+	<img alt="Тренинг в Софии, Болгария" src="img/photo/sofia_281006.jpg" style="height: 414px; width: 600px; " title="София, Болгария" /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Êàçàíè" src="img/photo/kazan_190806_18.jpg" style="height: 450px; width: 600px; " title="Êàçàíü" /></p>
+	<img alt="Тренинг в Казани" src="img/photo/kazan_190806_18.jpg" style="height: 450px; width: 600px; " title="Казань" /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Êàçàíè. Óïðàæíåíèå &quot;Ìàÿòíèê&quot;" src="img/photo/kazan_190806_6.jpg" title="Óïðàæíåíèå &quot;Ìàÿòíèê&quot;" /></p>
+	<img alt="Тренинг в Казани. Упражнение &quot;Маятник&quot;" src="img/photo/kazan_190806_6.jpg" title="Упражнение &quot;Маятник&quot;" /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Êàçàíè. Ñîñòîÿíèå HPS" height="467" src="img/photo/kazan_190806_3.jpg" title="Ñîñòîÿíèå HPS" width="310" /></p>
+	<img alt="Тренинг в Казани. Состояние HPS" height="467" src="img/photo/kazan_190806_3.jpg" title="Состояние HPS" width="310" /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Êàçàíè. Ïàçåòèôô! ;-)" src="img/photo/kazan_190806_14.jpg" title="Ïàçåòèôô! ;-)" /></p>
+	<img alt="Тренинг в Казани. Пазетифф! ;-)" src="img/photo/kazan_190806_14.jpg" title="Пазетифф! ;-)" /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Ìîñêâå. ×òåíèå îäû." src="img/photo/moscow_170606_7.jpg" title="×òåíèå îäû." /></p>
+	<img alt="Тренинг в Москве. Чтение оды." src="img/photo/moscow_170606_7.jpg" title="Чтение оды." /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Ìîñêâå. Ñçàäè âûñòóïàþùåãî åãî àíãåë õðàíèòåëü ;-)" src="img/photo/moscow_170606_5.jpg" title="Ñçàäè âûñòóïàþùåãî åãî àíãåë õðàíèòåëü ;-)" />&nbsp;&nbsp; <img alt="Òðåíèíã â Êàçàíè. Èíñàéò" height="280" src="img/photo/kazan_190806_4.jpg" title="Èíñàéò" width="268" /></p>
+	<img alt="Тренинг в Москве. Сзади выступающего его ангел хранитель ;-)" src="img/photo/moscow_170606_5.jpg" title="Сзади выступающего его ангел хранитель ;-)" />&nbsp;&nbsp; <img alt="Тренинг в Казани. Инсайт" height="280" src="img/photo/kazan_190806_4.jpg" title="Инсайт" width="268" /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Ìîñêâå. Âèçóàëèçàöèÿ ñî÷íîãî ìàíäàðèíà íàä ãîëîâîé." height="335" src="img/photo/moscow_080406_6.jpg" title="Âèçóàëèçàöèÿ ñî÷íîãî ìàíäàðèíà íàä ãîëîâîé" width="332" />&nbsp;&nbsp; <img alt="Òðåíèíã â Ìîñêâå. Ïîçèòèâ â îäèí ùåë÷îê!" src="img/photo/moscow_080406_5.jpg" title="Ïîçèòèâ â îäèí ùåë÷îê!" /></p>
+	<img alt="Тренинг в Москве. Визуализация сочного мандарина над головой." height="335" src="img/photo/moscow_080406_6.jpg" title="Визуализация сочного мандарина над головой" width="332" />&nbsp;&nbsp; <img alt="Тренинг в Москве. Позитив в один щелчок!" src="img/photo/moscow_080406_5.jpg" title="Позитив в один щелчок!" /></p>
 <p style="text-align: center;">
-	<img alt="Òðåíèíã â Ìîñêâå. Â ïîëíîì øîêîëàäå! :-)" src="img/photo/moscow_080406_12_3.jpg" title="Â ïîëíîì øîêîëàäå! :-)" />&nbsp;&nbsp;</p>
+	<img alt="Тренинг в Москве. В полном шоколаде! :-)" src="img/photo/moscow_080406_12_3.jpg" title="В полном шоколаде! :-)" />&nbsp;&nbsp;</p>
 <p style="text-align: center;">
-	<img alt="Îäèí èç ñàìûõ ïåðâûõ òðåíèíãîâ ïî Íîâîìó Êîäó ÍËÏ â Ìîñêâå, êîòîðûé ìû âåëè âìåñòå ñ Êàïòåðåâûì Àëåêñååì è íà êîòîðûé ïðèøëî áîëüøå âñåãî íàøèõ &quot;êîëëåã ïî öåõó&quot;. Íà ôîòî Êàïòåðåâ Àëåêñåé - ñëåâà, Åãîð Áóëûãèí (òî åñòü ÿ) - ñïðàâà, îáíèìàþ Ìàðèþ Ãîðèíó (òîæå òðåíåð ÍËÏ)." height="333" src="img/photo/moscow_080406_7_1_333.jpg" title="Îäèí èç ñàìûõ ïåðâûõ òðåíèíãîâ ïî Íîâîìó Êîäó ÍËÏ â Ìîñêâå, êîòîðûé ìû âåëè âìåñòå ñ Êàïòåðåâûì Àëåêñååì è íà êîòîðûé ïðèøëî áîëüøå âñåãî íàøèõ &quot;êîëëåã ïî öåõó&quot;. Íà ôîòî Êàïòåðåâ Àëåêñåé - ñëåâà, Åãîð Áóëûãèí (òî åñòü ÿ) - ñïðàâà, îáíèìàþ Ìàðèþ Ãîðèíó (òîæå òðåíåð ÍËÏ)." width="406" /></p>
+	<img alt="Один из самых первых тренингов по Новому Коду НЛП в Москве, который мы вели вместе с Каптеревым Алексеем и на который пришло больше всего наших &quot;коллег по цеху&quot;. На фото Каптерев Алексей - слева, Егор Булыгин (то есть я) - справа, обнимаю Марию Горину (тоже тренер НЛП)." height="333" src="img/photo/moscow_080406_7_1_333.jpg" title="Один из самых первых тренингов по Новому Коду НЛП в Москве, который мы вели вместе с Каптеревым Алексеем и на который пришло больше всего наших &quot;коллег по цеху&quot;. На фото Каптерев Алексей - слева, Егор Булыгин (то есть я) - справа, обнимаю Марию Горину (тоже тренер НЛП)." width="406" /></p>
 <p style="text-align: center;">
-	<strong><a href="index873a.html?id=subscribe_news"><strong><span class="service">Ïîëó÷èòü èíôîðìàöèþ î ñëåäóþùèõ òðåíèíãàõ</span></strong></a></strong></p>
-</span><p><a href=index1779.html?id=trainings_photo_collection class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+	<strong><a href="index873a.html?id=subscribe_news"><strong><span class="service">Получить информацию о следующих тренингах</span></strong></a></strong></p>
+</span><p><a href=index1779.html?id=trainings_photo_collection class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -129,7 +129,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -151,7 +151,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
