--- a/print1799.html
+++ b/print1799.html
@@ -2,7 +2,7 @@
 <title>Спиральная динамика (цели и ценности)</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=AE8AA57D-F45B5-93F63E8E by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:46 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='спиральная динамика'>
 <meta name="description" content='Ценности, цели и способы приспособления представителей каждого уровня спиральной динамики.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
