--- a/print18c0.html
+++ b/print18c0.html
@@ -2,7 +2,7 @@
 <title>Для НЛПеров</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=11E0E292-F4297-CBD0453C by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:03:57 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Материалы, имеющие профессиональную ценность. Язык описания может быть не понятен тем,  кто не знаком с НЛП. '>
 <link rel="stylesheet" href="css/print.css" type="text/css">
