--- a/print1997.html
+++ b/print1997.html
@@ -2,7 +2,7 @@
 <title>Все обо всем</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=9531BF9E-F45D5-9073189B by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:38 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Материалы с семинара Ричарда Бэндлера по DHE.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
