--- a/print1a62.html
+++ b/print1a62.html
@@ -2,7 +2,7 @@
 <title>Топ 10</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F8098E52-F4631-38207BC3 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 12:54:24 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='10 статей, которые заняли самый высокий рейтинг по оценкам читателей.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
