--- a/print1a8b.html
+++ b/print1a8b.html
@@ -1,10 +1,10 @@
 <html>
-<title>Èíôîêîíôåðåíöèÿ 2011 - âûñòóïëåíèå Åãîðà Áóëûãèíà</title>
+<title>Инфоконференция 2011 - выступление Егора Булыгина</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4ACB by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:06:01 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='èíôîêîíôåðåíöèÿ, èíôîêîíôåðåíöèÿ 2011, èíôîáèçíåñ, Åãîð Áóëûãèí, òðåíèíã, ïðîäàæà òðåíèíãîâ, áàçà ïîäïèñ÷èêîâ, ëèäû, ëèäãåí, äåíüãè, áèçíåñ, èíòåðíåò'>
-<meta name="description" content='Êàê çàðàáîòàòü ìèëëèîí ðóáëåé ñ òðåíèíãà çà 45 äíåé? Êàê ñîáðàòü òðåíèíã çà 7 äíåé âîîáùå áåç èíòåðíåòà? Êàê ïîëó÷èòü áàçó â 1500 ïîäïèñ÷èêîâ çà 4 äíÿ è ïîïóòè çàðàáîòàòü 74.000 ðóáëåé? ...À òàê æå äëÿ ïðîôåññèîíàëîâ: êàêîé òðåíä â òðåíèíãîâîì áèçíåñå íà÷èíàåò íàáèðàòü îáîðîòû â íèøå áèçíåñ-àóäèòîðèè?'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='инфоконференция, инфоконференция 2011, инфобизнес, Егор Булыгин, тренинг, продажа тренингов, база подписчиков, лиды, лидген, деньги, бизнес, интернет'>
+<meta name="description" content='Как заработать миллион рублей с тренинга за 45 дней? Как собрать тренинг за 7 дней вообще без интернета? Как получить базу в 1500 подписчиков за 4 дня и попути заработать 74.000 рублей? ...А так же для профессионалов: какой тренд в тренинговом бизнесе начинает набирать обороты в нише бизнес-аудитории?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,7 +14,7 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Èíôîêîíôåðåíöèÿ 2011 - âûñòóïëåíèå Åãîðà Áóëûãèíà</h1><a href=index1a8b.html?id=F4ACB class=slink>web-âåðñèÿ</a><p><span class='print'><p style="text-align: center;">
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Инфоконференция 2011 - выступление Егора Булыгина</h1><a href=index1a8b.html?id=F4ACB class=slink>web-версия</a><p><span class='print'><p style="text-align: center;">
 	<iframe allowfullscreen="" frameborder="0" height="360" src="http://www.youtube.com/embed/bACZIDhet6E?rel=0" width="640"></iframe></p>
 <p style="text-align: center;">
 	        <!-- VKontakte -->
@@ -60,16 +60,16 @@ VK.Widgets.Like("vk_like", {type: "full", width: 400});
 </p>
 <ul>
 	<li>
-		Êàê çàðàáîòàòü ìèëëèîí ðóáëåé ñ òðåíèíãà çà 45 äíåé?</li>
+		Как заработать миллион рублей с тренинга за 45 дней?</li>
 	<li>
-		Êàê ñîáðàòü òðåíèíã çà 7 äíåé âîîáùå áåç èíòåðíåòà?</li>
+		Как собрать тренинг за 7 дней вообще без интернета?</li>
 	<li>
-		Êàê ïîëó÷èòü áàçó â 1500 ïîäïèñ÷èêîâ çà 4 äíÿ è ïîïóòè çàðàáîòàòü 74.000 ðóáëåé?</li>
+		Как получить базу в 1500 подписчиков за 4 дня и попути заработать 74.000 рублей?</li>
 	<li>
-		...À òàê æå äëÿ ïðîôåññèîíàëîâ: êàêîé òðåíä â òðåíèíãîâîì áèçíåñå íà÷èíàåò íàáèðàòü îáîðîòû â íèøå áèçíåñ-àóäèòîðèè?</li>
+		...А так же для профессионалов: какой тренд в тренинговом бизнесе начинает набирать обороты в нише бизнес-аудитории?</li>
 </ul>
 <p>
-	<strong>P.S. Ïîëó÷èòü óïîìÿíóòûé â âûñòóïëåíèè ïîäàðîê Âû ìîæåòå <a href="indexd83c.html?id=1000000-training-in-45-days" target="_blank">çäåñü</a></strong></p>
+	<strong>P.S. Получить упомянутый в выступлении подарок Вы можете <a href="indexd83c.html?id=1000000-training-in-45-days" target="_blank">здесь</a></strong></p>
 <p>
 	
 <script>
@@ -97,22 +97,22 @@ var idcomments_post_url = 'F4ACB.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4ACB" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
 </script></p>
-</span><p><a href=index1a8b.html?id=F4ACB class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index1a8b.html?id=F4ACB class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -173,7 +173,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -195,7 +195,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
