--- a/print1b0f.html
+++ b/print1b0f.html
@@ -2,7 +2,7 @@
 <title>Хорошо организованное бессознательное, Джон Гриндер</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=5433F004-F42A9-F1A024D5 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:54 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Фрагмент семинара Джона Гриндера в Москве (2004 г.), посвященный вопросам сознательно-бессознательного интерфейса.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
