--- a/print1f51.html
+++ b/print1f51.html
@@ -2,7 +2,7 @@
 <title>Что такое NLP</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=02CAC148-F4242-2F439DD8 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:55:06 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп, nlp'>
 <meta name="description" content='...с разных точек зрения.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
